--- a/themes/fivealive-lite/options/grape/css/grape.css
+++ b/themes/fivealive-lite/options/grape/css/grape.css
@@ -131,7 +131,7 @@ hr {
   background-image: none;
   border: 1px solid #e4afd3; }
 
-.navbar-dark .navbar-brand, .dropdown-item, .dropdown-item a {
+.navbar-dark .navbar-brand, .dropdown-item, .dropdown-item a, .dropdown-menu .tikihelp {
   color: #fff; }
 
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
@@ -207,7 +207,7 @@ hr {
   border-color: #0d5865; }
 
 .dropdown-menu {
-  background-color: #a02871;
+  background-color: #c82b8b;
   border: 1px solid rgba(0, 0, 0, 0.15); }
 
 .dropdown-item:hover, .dropdown-item .btn.btn-link:hover, .dropdown-item:focus, .dropdown-item .btn.btn-link:focus {
