--- a/themes/fivealive-lite/options/kiwi/scss/_variables.scss
+++ b/themes/fivealive-lite/options/kiwi/scss/_variables.scss
@@ -88,7 +88,7 @@ $input-border-right-color: #fff;
 $input-border-bottom-color: #fff;
 $input-border-left-color: #f5fb86;
 
-$dropdown-bg: #baba25;
+$dropdown-bg: #a7a71f;
 $dropdown-border-color: rgba(0, 0, 0, 0.15);
 
 $dropdown-link-color: #ffffff;
