--- a/themes/fivealive-lite/options/orange/scss/_variables.scss
+++ b/themes/fivealive-lite/options/orange/scss/_variables.scss
@@ -89,7 +89,7 @@ $input-border-right-color: #fbf1ed;
 $input-border-bottom-color: #fbf1ed;
 $input-border-left-color: #fac5b1;
 
-$dropdown-bg: #e77d4f;
+$dropdown-bg: #d36d41;
 $dropdown-border-color: rgba(0, 0, 0, 0.15);
 
 $dropdown-link-color: #ffffff;
