--- a/themes/fivealive-lite/options/plum/css/plum.css
+++ b/themes/fivealive-lite/options/plum/css/plum.css
@@ -134,7 +134,7 @@ hr {
   background-image: none;
   border: 1px solid #f9f0ff; }
 
-.navbar-dark .navbar-brand, .dropdown-item, .dropdown-item a {
+.navbar-dark .navbar-brand, .dropdown-item, .dropdown-item a, .dropdown-menu .tikihelp {
   color: #fff; }
 
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
