--- a/themes/fivealive-lite/scss/_selectors-for-options.scss
+++ b/themes/fivealive-lite/scss/_selectors-for-options.scss
@@ -260,7 +260,8 @@ hr {
 }
 .navbar-dark .navbar-brand,
 .dropdown-item,
-.dropdown-item a {
+.dropdown-item a,
+.dropdown-menu .tikihelp {
   color: #ffffff;
 }
 
